--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,15 @@ attrs==25.4.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
 comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
 datasets==4.4.1
 debugpy==1.8.17
 decorator==5.2.1
 dill==0.4.0
 executing==2.2.1
 filelock==3.19.1
+fonttools==4.61.0
 frozenlist==1.8.0
 fsspec==2025.9.0
 h11==0.16.0
@@ -30,7 +33,9 @@ jedi==0.19.2
 Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+kiwisolver==1.4.9
 MarkupSafe==2.1.5
+matplotlib==3.10.7
 matplotlib-inline==0.2.1
 mpmath==1.3.0
 multidict==6.7.0
@@ -60,6 +65,7 @@ pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.5.0
 pluggy==1.6.0
+polars-runtime-32==1.36.1
 prompt_toolkit==3.0.52
 propcache==0.4.1
 psutil==7.1.3
@@ -67,6 +73,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==22.0.0
 Pygments==2.19.2
+pyparsing==3.2.5
 pytest==9.0.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -75,6 +82,7 @@ pyzmq==27.1.0
 regex==2025.11.3
 requests==2.32.5
 safetensors==0.6.2
+seaborn==0.13.2
 setuptools==70.2.0
 six==1.17.0
 sniffio==1.3.1
